--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <title>HTML wireframe</title>
@@ -38,7 +38,9 @@
     <main class="main" role="main" id="top">
       <header role="banner" class="banner">
         <p class="name" style="color:rgb(10, 43, 23); display: inline;">
-          Daniel A. Marriott
+          <span>Daniel</span>
+          <span>A.</span>
+          <span>Marriott</span>
         </p>
         <p class="headline">
           Front-end engineer skilled in Javascript and HTML/CSS
@@ -48,7 +50,10 @@
       <section id="projects" class="projects">
         <p class="projectName">My Quiz App: The Young Thug Quiz</p>
         <div class="project">
-          <img src="http://u.cubeupload.com/dm93/thugquizapp.jpg" />
+          <img
+            alt="Screenshot of Quiz App."
+            src="http://u.cubeupload.com/dm93/thugquizapp.jpg"
+          />
         </div>
         <div class="projectBlurb">
           <p>
@@ -56,23 +61,14 @@
           </p>
           <p>Contains HTML5, CSS, Javascript, Jquery</p>
           <div class="projectLinks">
-            <a href="https://damarriott.github.io/quiz-app/">Link to live app</a
+            <a target="_blank" href="https://damarriott.github.io/quiz-app/"
+              >Link to live app</a
             ><span> |</span>
-            <a href="https://github.com/DAMarriott/quiz-app">Link to repo</a>
+            <a target="_blank" href="https://github.com/DAMarriott/quiz-app"
+              >Link to repo</a
+            >
           </div>
         </div>
-      </section>
-
-      <section>
-        Project 2
-      </section>
-
-      <section>
-        Project 3
-      </section>
-
-      <section>
-        Project 4
       </section>
 
       <section class="bio" id="bio">
@@ -80,8 +76,8 @@
           I love web development and coding because using
           <span style="font-weight: bolder">creativity</span> and
           <span style="font-weight: bolder">problem solving</span> abilities in
-          this capacity gives me total fulfilment and happiness. I am constantly
-          learning and acquiring new skills within the field out of
+          this capacity gives me total fulfillment and happiness. I am
+          constantly learning and acquiring new skills within the field out of
           <span style="font-weight: bolder">curiosity</span> and an insatiable
           <span style="font-weight: bolder">hunger</span> for knowledge.
         </p>
@@ -97,33 +93,52 @@
 
       <div class="slideshow-container" role="img-carousel">
         <div class="mySlides fade">
-          <img src="http://u.cubeupload.com/dm93/IMG1721.jpeg" />
+          <img
+            alt="Eiffel Tower, summer 2019."
+            src="http://u.cubeupload.com/dm93/IMG1721.jpeg"
+          />
           <div class="text">Eiffel Tower, summer 2019.</div>
         </div>
 
         <div class="mySlides fade">
-          <img src="http://u.cubeupload.com/dm93/IMG1932.jpeg" />
+          <img
+            alt="My cat, Cash."
+            src="http://u.cubeupload.com/dm93/IMG1932.jpeg"
+          />
           <div class="text">My cat, Cash.</div>
         </div>
 
         <div class="mySlides fade">
-          <img src="http://u.cubeupload.com/dm93/IMG0360.jpeg" />
+          <img
+            alt="Sunset in Venice."
+            src="http://u.cubeupload.com/dm93/IMG0360.jpeg"
+          />
           <div class="text">Sunset in Venice.</div>
         </div>
 
         <div class="mySlides fade">
-          <img src="http://u.cubeupload.com/dm93/IMG0047.jpg" />
+          <img
+            alt="Sunrise on Mt Fuji, summer 2019."
+            src="http://u.cubeupload.com/dm93/IMG0047.jpg"
+          />
           <div class="text">Sunrise on Mt Fuji, summer 2019.</div>
         </div>
 
         <div class="mySlides fade">
-          <img src="http://u.cubeupload.com/dm93/IMG1633.jpeg" />
+          <img
+            alt="My mom and I, Tower of Piza, summer 2019."
+            src="http://u.cubeupload.com/dm93/IMG1633.jpeg"
+          />
           <div class="text">My mom and I, Tower of Piza, summer 2019.</div>
         </div>
       </div>
 
       <section id="resume" class="resume">
-        <h2>Curriculum Vitae</h2>
+        <h2
+          style="color: white; background-color:rgb(10, 43, 23); padding: 2px; text-align: center;"
+        >
+          Curriculum Vitae
+        </h2>
         <div>
           <h3>Summary</h3>
           <p>
@@ -181,8 +196,8 @@
     <footer role="content-info">
       <h3>Contact</h3>
       <a href="mailto:dmarriott93@gmail.com">dmarriott93@gmail.com</a
-      ><span> |</span> <a href="call:2036443507">2036443507</a><span> |</span>
-      <a href="https://github.com/DAMarriott">GitHub</a><span> |</span>
+      ><span> |</span> <a href="https://github.com/DAMarriott">GitHub</a
+      ><span> |</span>
       <a href="https://www.linkedin.com/in/danny-marriott-4507b272/"
         >LinkedIn</a
       >
